--- a/index.html
+++ b/index.html
@@ -56,13 +56,13 @@
       margin-right: 25px;
     }
 
-    header nav {
+    header ul {
       display: flex;
       font-weight: 600;
     }
 
     @media screen and (width<730px) {
-      header nav {
+      header ul {
         display: none
       }
 
@@ -76,7 +76,7 @@
 
     }
 
-    header nav li a {
+    header nav a {
       padding: 17px 25px;
     }
 
@@ -244,10 +244,12 @@
       <a href="./index.html" class="logo">Logo</a>
 
       <nav>
-        <li><a href="#" class="nav-active">Start</a></li>
-        <li><a href="#">About</a></li>
-        <li><a href="#">Features</a></li>
-        <li><a href="#">Pricing</a></li>
+        <ul>
+          <li><a href="#" class="nav-active">Start</a></li>
+          <li><a href="#">About</a></li>
+          <li><a href="#">Features</a></li>
+          <li><a href="#">Pricing</a></li>
+        </ul>
       </nav>
 
       <button class="btn header-cart-btn">Cart <span>(1)</span></button>
@@ -291,18 +293,22 @@
 
       <div class="footer-nav">
         <nav>
-          <li><a href="#">Home</a></li>
-          <li><a href="#">About</a></li>
-          <li><a href="#">Features</a></li>
-          <li><a href="#">Pricing</a></li>
-          <li><a href="#">Contact us</a></li>
+          <ul>
+            <li><a href="#">Home</a></li>
+            <li><a href="#">About</a></li>
+            <li><a href="#">Features</a></li>
+            <li><a href="#">Pricing</a></li>
+            <li><a href="#">Contact us</a></li>
+          </ul>
         </nav>
         <nav>
-          <li><a href="#">Blog</a></li>
-          <li><a href="#">Search</a></li>
-          <li><a href="#">T & Cs</a></li>
-          <li><a href="#">Privacy</a></li>
-          <li><a href="#">Community</a></li>
+          <ul>
+            <li><a href="#">Blog</a></li>
+            <li><a href="#">Search</a></li>
+            <li><a href="#">T & Cs</a></li>
+            <li><a href="#">Privacy</a></li>
+            <li><a href="#">Community</a></li>
+          </ul>
         </nav>
       </div>
 
