feat: updates for google

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description"
+    content="Author: Pavel Viarbitski. This is a test task from ASCO company, received on 12.09 and completed on 12.09.">
   <title>Zadanie front-end (ASCO)</title>
 
   <link rel="icon" href="https://asco.com.pl/favicon-32x32.png?v=50a51715e18c211065eb180ebb19fa13" type="image/png">
@@ -322,7 +324,7 @@
         </form>
 
         <div class="social-media">
-          <a href="https://www.facebook.com/" target="_blank">
+          <a href="https://www.facebook.com/" target="_blank" aria-label="link to out facebook page">
             <svg height="20" viewBox="0 0 72 72" width="20">
               <g fill="none" fill-rule="evenodd">
                 <rect fill="#fff" height="72" rx="8" width="72" />
@@ -332,7 +334,7 @@
               </g>
             </svg>
           </a>
-          <a href="https://www.instagram.com/pavel_anvi/" target="_blank">
+          <a href="https://www.instagram.com/pavel_anvi/" target="_blank" aria-label="link to out instagram page">
             <svg height=20 width=20 viewBox="0 0 600 600">
               <g transform="matrix(1.01619,0,0,1.01619,44,43.8384)">
                 <path
@@ -347,7 +349,7 @@
               </g>
             </svg>
           </a>
-          <a href="https://www.snapchat.com/" target="_blank">
+          <a href="https://www.snapchat.com/" target="_blank" aria-label="link to out snapchat page">
             <svg height=20 width=20 enable-background="new 0 0 128 128" viewBox="0 0 128 128">
               <g>
                 <g>
@@ -359,7 +361,7 @@
               </g>
             </svg>
           </a>
-          <a href="https://twitter.com/" target="_blank">
+          <a href="https://twitter.com/" target="_blank" aria-label="link to out twitter page">
             <svg height=20 style="fill-rule:evenodd;clip-rule:evenodd;stroke-linejoin:round;stroke-miterlimit:2;"
               viewBox="0 0 512 512" width=20 xml:space="preserve">
               <path
@@ -367,7 +369,7 @@
                 style="fill-rule:nonzero;" fill="#fff" />
             </svg>
           </a>
-          <a href="https://www.youtube.com/" target="_blank">
+          <a href="https://www.youtube.com/" target="_blank" aria-label="link to out youtube page">
             <svg height=20 style="fill-rule:evenodd;clip-rule:evenodd;stroke-linejoin:round;stroke-miterlimit:2;"
               viewBox="0 0 512 512" width=20 xml:space="preserve">
               <path
